# serializer version: 1
# name: test_diagnostics[Jerusalem]
  dict({
    'data': dict({
      'candle_lighting_offset': 40,
      'diaspora': False,
      'havdalah_offset': 0,
      'language': 'en',
      'location': dict({
        'altitude': '**REDACTED**',
        'diaspora': False,
        'latitude': '**REDACTED**',
        'longitude': '**REDACTED**',
        'name': 'test home',
        'timezone': dict({
          '__type': "<class 'zoneinfo.ZoneInfo'>",
          'repr': "zoneinfo.ZoneInfo(key='Asia/Jerusalem')",
        }),
      }),
    }),
    'entry_data': dict({
      'diaspora': False,
      'language': 'en',
      'time_zone': 'Asia/Jerusalem',
    }),
  })
# ---
# name: test_diagnostics[New York]
  dict({
    'data': dict({
      'candle_lighting_offset': 18,
      'diaspora': True,
      'havdalah_offset': 0,
      'language': 'en',
      'location': dict({
        'altitude': '**REDACTED**',
        'diaspora': True,
        'latitude': '**REDACTED**',
        'longitude': '**REDACTED**',
        'name': 'test home',
        'timezone': dict({
          '__type': "<class 'zoneinfo.ZoneInfo'>",
          'repr': "zoneinfo.ZoneInfo(key='America/New_York')",
        }),
      }),
    }),
    'entry_data': dict({
      'diaspora': True,
      'language': 'en',
      'time_zone': 'America/New_York',
    }),
  })
# ---
# name: test_diagnostics[None]
  dict({
    'data': dict({
      'candle_lighting_offset': 18,
      'diaspora': False,
      'havdalah_offset': 0,
      'language': 'en',
      'location': dict({
        'altitude': '**REDACTED**',
        'diaspora': False,
        'latitude': '**REDACTED**',
        'longitude': '**REDACTED**',
        'name': 'test home',
        'timezone': dict({
          '__type': "<class 'zoneinfo.ZoneInfo'>",
          'repr': "zoneinfo.ZoneInfo(key='US/Pacific')",
        }),
      }),
    }),
    'entry_data': dict({
      'language': 'en',
    }),
  })
# ---
